Reduce package size
1. Remove the use of Nd4j library which is too large
2. Implement HDArray which used to handle high dimensional array operations